--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "skipLibCheck": true,
     "typeRoots": ["node_modules/@types", "./types"]
   },
