--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,7 +20,9 @@
   "jsonwebtoken": "^9.0.2",
   "mongoose": "^8.8.2",
   "morgan": "^1.10.0",
+  "node-cron": "^3.0.3",
   "validator": "^13.12.0",
+  "web3": "^4.15.0",
   "winston": "^3.17.0"
  },
  "devDependencies": {
@@ -31,6 +33,7 @@
   "@types/morgan": "^1.9.9",
   "@types/node": "^22.9.3",
   "@types/validator": "^13.12.2",
+  "@types/web3": "^1.0.20",
   "ts-node-dev": "^2.0.0",
   "typescript": "^5.7.2"
  }
