--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,7 @@
   "start": "node dist/index.js"
  },
  "dependencies": {
+  "@types/mongoose": "^5.11.96",
   "bcryptjs": "^2.4.3",
   "cors": "^2.8.5",
   "dotenv": "^16.4.5",
@@ -32,6 +33,7 @@
   "@types/jsonwebtoken": "^9.0.7",
   "@types/morgan": "^1.9.9",
   "@types/node": "^22.9.3",
+  "@types/node-cron": "^3.0.11",
   "@types/validator": "^13.12.2",
   "@types/web3": "^1.0.20",
   "ts-node-dev": "^2.0.0",
